# bilt

./: .gitignore  CLAUDE.md  LICENSE  Manifest.in  NOTICE  README.md  installation.md  pyproject.toml  requirements.txt  setup.py
bilt/: __init__.py  anchors.py  backbone.py  config.py  core.py  dataset.py  evaluator.py  head.py  inferencer.py  loss.py  model.py  neck.py  trainer.py  utils.py  variants.py
docs/: README.md  api.md  architecture.md  dataset.md  inference.md  installation.md  quickstart.md  training.md  variants.md
examples/: advanced_usage.py  basic_usage.py
tests/: test_basic.py
third_party_licenses/: Pillow_LICENSE.txt  Werkzeug_LICENSE.txt  numpy_LICENSE.txt  torch_LICENSE.txt  torchvision_LICENSE.txt
